Closed Bug 405986 Opened 18 years ago Closed 18 years ago

XUL <tooltip noautohide="true"> isn't working in FF 3.x

Categories

(Core :: XUL, defect)

x86
Windows XP
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: telega, Assigned: enndeakin)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b1) Gecko/2007110811 Firefox/3.0b1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b1) Gecko/2007110811 Firefox/3.0b1 XUL <tooltip noautohide="true"> attribute isn't working in FF 3.x: despite the attribute the tooltip is hidden in about 5 seconds. FF 2.x works as expected. Reproducible: Always Steps to Reproduce: 1. Open test.xul file in browser: <?xml version="1.0" encoding="UTF-8"?> <?xml-stylesheet href="chrome://global/skin/" type="text/css"?> <window xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"> <tooltip id="mytooltip" label="my tooltip" noautohide="true"/> <label value="my label" tooltip="mytooltip"/> </window> 2. Move the mouse over the label and leave it being over. 3. See that tooltip gets hidden after about 5 seconds. Actual Results: Tooltip gets hidden. Expected Results: Tooltip should stay visible.
Confirming
Status: UNCONFIRMED → NEW
Component: Extension Compatibility → XUL Widgets
Ever confirmed: true
Product: Firefox → Toolkit
QA Contact: extension.compatibility → xul.widgets
Version: unspecified → Trunk
Component: XUL Widgets → XP Toolkit/Widgets: Menus
Product: Toolkit → Core
QA Contact: xul.widgets → xptoolkit.menus
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #290712 - Flags: superreview?(neil)
Attachment #290712 - Flags: review?(neil)
Attachment #290712 - Flags: superreview?(neil)
Attachment #290712 - Flags: superreview+
Attachment #290712 - Flags: review?(neil)
Attachment #290712 - Flags: review+
Attachment #290712 - Flags: approval1.9?
Attachment #290712 - Flags: approval1.9? → approval1.9+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
The testcase fails pretty often on my machines. It seems to depend on whether mouse is over some specific part of the page. If mouse is over chrome, tooltip is never shown so popupshown event isn't dispatched etc. - that is at least what I expect.
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.menus → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: