Bug 405986, noautohide attribute check for tooltips is reversed, r+sr=neil,a=damon